--- a/set.env
+++ b/set.env
@@ -1,4 +1,4 @@
-PREFIXE=+
+7PREFIXE=+
 LECTURE_AUTO_STATUS=non
 TELECHARGER_AUTO_STATUS=oui
 NOM_BOT=Mr Gojo 
@@ -14,6 +14,6 @@ STARTING_BOT_MESSAGE=oui
 ANTI_VUE_UNIQUE=oui
 PM_CHATBOT=non
 HEROKU=non
-DATABASE_URL=postgresql://zokouvf_user:rAzO0xc7jeW5fN2Ts912VpnNyc7dCCWj@dpg-cs9kumi3esus739h5neg-a.oregon-postgres.render.com/zokouvf
+DATABASE_URL=postgresql://zokou_vf_user:BjQVRuHoVghANlOOAdDyn4MHJgbPK9W8@dpg-csu7omggph6c7387fbdg-a.oregon-postgres.render.com/zokou_vf
 ANTI_COMMAND_SPAM=oui 
-ANTI_VUE_UNIQUE=oui
+ANTI_VUE_UNIQUE=non
